# OpenCVNative

./: LICENSE  import-summary.txt
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/yuh5/testopencvnative/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/example/yuh5/testopencvnative/: EdgeDetection.java  MainActivity.java
app/src/main/res/layout/: activity_edge_dectection.xml  activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/yuh5/testopencvnative/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
